# clean-your-room

./: .gitignore  AGENTS.md  CLAUDE.md  PROMPT.md  README.md  build-your-room-spec.md  improvement-prompt.md  prompt.md  pyproject.toml  ralph.sh  testing.md
.claude/: settings.json
diary/: 2026-04-09-task2-postgresql-schema.md  2026-04-27-task52-pipeline-authoring-ux.md  2026-04-27-task53-harness-mcp-tools.md  2026-04-27-task54-dirty-workspace-recovery.md  2026-04-27-task55-checkpoint-commits.md  2026-04-27-task56-kill-handling.md  2026-04-27-task57-code-review-checkpoint.md  2026-04-27-task58-diary-filesystem-writes.md
docs/: index.md
specs/: default_prompts.json  example_pipeline_def.json
static/: style.css
tests/: conftest.py  test_browser_runner.py  test_claude_adapter.py  test_clone_manager.py  test_code_review.py  test_codex_adapter.py  test_command_registry.py  test_config.py  test_context_monitor.py  test_db.py  test_git_ops.py  test_harness_mcp.py  test_htn_planner.py  test_impl_plan.py  test_impl_task.py  test_integration.py  test_lease_manager.py  test_models.py  test_orchestrator.py  test_recovery.py  test_review_loop.py  test_routes_api.py  test_routes_cleanup.py  test_routes_dashboard.py  test_routes_escalations.py  test_routes_htn_decision.py  test_routes_htn_tasks.py  test_routes_jobs.py  test_routes_pipeline_defs.py  test_routes_pipeline_lifecycle.py  test_routes_pipelines.py  test_routes_prompts.py  test_routes_repos.py  test_routes_stage_detail.py  test_routes_streams.py  test_runner.py  test_sandbox.py  test_spec_author.py  test_stage_graph.py  (+4 more)
(+153 files in other folders)
